calibre/deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: calibre
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: calibre
    spec:
      containers:
      - name: calibre
        image: regueiro/calibre-server:latest
        imagePullPolicy: Always
        args:
        - "--log=/dev/stdout"
        - "--url-prefix=/Books/"
        ports:
        - name: calibre
          containerPort: 8080
        volumeMounts:
        - name: calibre
          mountPath: /conf
          subPath: Ebooks/conf
        - name: calibre
          mountPath: /download
          subPath: downloads/Books
        - name: calibre
          mountPath: /opt/calibre/library
          subPath: Ebooks/Library
      volumes:
      - name: calibre
        glusterfs:
          endpoints: glusterfs-cluster
          path: data
          readOnly: false
