calibre/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: calibre
  labels:
    app: calibre
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: calibre
